<resources>
    <string name="app_name">工具</string>

    <string name="longitude">经度:</string>
    <string name="latitude">纬度:</string>
    <string name="no_scenery">不在任何景区</string>
    <string name="save_and_share">截屏并分享</string>
    <string name="copy_info">复制到剪贴板</string>
    <string name="save_log">保存日志</string>

    <string name="strokes_size">笔画大小</string>
    <string name="color_choose">颜色选择</string>
    <string name="go_back">回退</string>
    <string name="rubber">橡皮</string>
    <!--指南针-->
    <string name="app_label">指南针</string>
    <string name="getting_location">正在读取经纬度#8320</string>
    <string name="location_north">北</string>
    <string name="location_south">南</string>
    <string name="location_east">东</string>
    <string name="location_west">西</string>
    <string name="menu_calibrate">校正指南針</string>
    <string name="menu_calibrate_altitude">联网校准海拔</string>
    <string name="calibrate_success">校正成功</string>
    <string name="calibrate_failed_no_location">校准失败:无法获取当前经纬度</string>
    <string name="calibrate_failed_timeout">校准失敗:服务器连接超时</string>
    <string name="pressure_title">气压</string>
    <string name="altitude_title">海拔</string>
    <string name="pressure">%.1f</string>
    <string name="altitude">%.1f</string>
    <string name="pressure_unit">百帕</string>
    <string name="altitude_unit">公尺</string>
    <string name="dialog_title_no_network">请打开WLAN或移动数据流量</string>
    <string name="dialog_calibrat_altitude">正在通过网络校准海拔</string>
    <string name="direction_north">北</string>
    <string name="direction_south">南</string>
    <string name="direction_east">东</string>
    <string name="direction_west">西</string>

    <!--2048-->
    <string name="header">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">啦啦啦德玛西亚~谁玩LOL啊？加我QQ：1195211669</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now...</string>
    <string name="endless">"Endless" Mode</string>

</resources>
