<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rubber">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="back"
                android:src="@drawable/back_white" />

            <View
                android:layout_width="@dimen/divider_line"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/main_menu"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/main_menu" />
        </RelativeLayout>

        <View style="@style/divider_line" />

        <com.jingqubao.tool.view.BiuEditText
            android:id="@+id/main_user_input"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_write_bg"
            android:gravity="center_vertical"
            android:hint="@string/app_name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="@color/font_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/main_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/font_color"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="@color/font_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/main_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/font_color"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/scenery_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/no_scenery"
            android:textColor="@color/font_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/prompt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="正在定位，请骚后~^_^~"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <com.jingqubao.tool.drawable.DrawableView
            android:id="@+id/main_drawable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View style="@style/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="strokesSize"
                android:text="@string/strokes_size" />

            <View
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="@color/divider_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="colorChoose"
                android:text="@string/color_choose" />

            <View
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="@color/divider_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="goBack"
                android:text="@string/go_back" />

            <View
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="@color/divider_line" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="rubber"
                android:text="@string/rubber" />
        </LinearLayout>

        <View style="@style/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_save_view_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save_and_share"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="@color/divider_line" />

            <TextView
                android:id="@+id/copy_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/copy_info"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="0.2dp"
                android:layout_height="match_parent"
                android:background="@color/divider_line" />

            <TextView
                android:id="@+id/save_log"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/save_log"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <com.jingqubao.tool.view.CircularRevealView
        android:id="@+id/main_reveal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

</RelativeLayout>
